--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,14 +1,17 @@
 {{>header}}
+<div class="div__messagem"></div>
 <main>
     <form>
         <h1>Área para publica novo contéudo</h1>
-        <div style="position: relative; flex-direction:column;"><label for="title"
-                style="position: absolute; left:10px; top:-30px;"><strong> Título - </strong></label><input type="text"
+        <div style="position: relative; flex-direction:column;"><label for="title" ><strong> Título - </strong></label><input type="text"
                 placeholder="ex: Meu primeiro código em python" id="title"></div>
-        <div style="position: relative; flex-direction:column;"><label for="body"
-                style="position: absolute; left:10px; top:-30px;"><strong>Corpo da sua publicação - </strong></label>
+        <div style="position: relative; flex-direction:column;"><label for="body"><strong>Corpo da sua publicação - </strong></label>
                 <textarea style="resize: none;" id="body"></textarea>
                 </div>
-            <div class="div__buttons"><button>Cancelar</button><button id="publicar">Publica</button></div>
+            <div class="div__buttons">
+                <div>
+                    <button>Cancelar</button><button id="publicar">Publica</button>
+                </div>
+            </div>
     </form>
 </main>
