--- a/views/err/404.handlebars
+++ b/views/err/404.handlebars
@@ -1,5 +1,7 @@
 {{>header}}
 <main>
     <h1>Erro 404</h1>
-<p> Pagina não encontrada </p>
+    <strong>Pagina não encontrada</strong>
+    <p>Nosso sistema não conseguiu encontra a pagina desejada,sentimos muito D: </p>
+    <span><a href="/">Inicio</a></span>
 </main>
