--- a/views/login/login.handlebars
+++ b/views/login/login.handlebars
@@ -2,7 +2,7 @@
 <span class="msg"></span>
 <div class="container">
      <div class="div-img">
-          <img src="imgs/user.png" alt="">
+          <img src="{{img}}" alt="">
      </div>
     <form>
        <div>
