--- a/views/register/register.handlebars
+++ b/views/register/register.handlebars
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="div-img">
-        <img src="imgs/cadeado.png" alt="">
+        <img src="{{img}}" alt="">
     </div>
     <form class="form__register">
 
