--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -1,4 +1,5 @@
 header {
+    position: relative;
     background-color: #000a10ee;
     display: flex;
     align-items: center;
@@ -25,23 +26,22 @@ header nav {
 
 header nav ul {
     display: flex;
-
+    align-items: center;
     gap: 15px;
     list-style: none;
     padding: 10px;
 }
-header nav .ul__menu {
-    border-right:1px solid white;
-}
+
 header nav ul li {
     transition: 0.2s;
+    width: auto;
 }
 header nav ul li a:hover{
     color: black;
     background-color: white;
 } 
 
-header nav .ul__mode li {
+header nav .ul__notification li {
     transition: 0.2s;
 }
 
@@ -55,7 +55,7 @@ header nav ul li a {
     padding: 5px;
     transition: 0.2s;
 }
-header button {
+header #open__menu,header #close__menu {
     display: none;
     border: none;
     color: white;
@@ -70,6 +70,9 @@ header .span__text {
     display: none;
 }
 @media (max-width:630px) {
+    .report__bug {
+        width: 90%;
+    }
     header {
         position: relative;
         height: 70px;
@@ -92,21 +95,51 @@ header .span__text {
     }
     header nav {
         position: absolute;
+        z-index: 3;
         flex-direction: column;
         right: 0;
         top: 70px;
         background-color: #000a10ee;
         display:block;
         z-index: 1;
+        border-bottom-left-radius: 5px;
+        animation: animation__menu 0.2s ;
     }
-    header ul {
+    @keyframes animation__menu {
+        0% {
+            right: -10%;
+        }
+        100% {
+            right:0;
+        }
+    }
+    header nav ul {
+        align-items: start;
+        justify-content: start;
         border: none;
         flex-direction: column;
     }
+    header nav ul li {width:100%;}
     header nav ul li a {
         display: flex;
         gap: 5px;
         align-items: center;
         font-size: 1.1em;
     }
+}
+
+header nav ul li .number_notification {
+    color: rgb(243, 79, 79);
+}
+
+header  .div__notifications {
+    background-color: #000a10ee;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    padding: 15px;
 }
