--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,98 +1,133 @@
 main {
-    width: 100%;
-    height: 100%;
-    padding: 2vh;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 0 20px;
 }
 
-main .container__post {
-    display: flex;
-    flex-direction: column;
-    overflow-y: hidden;
-    gap: 30px;
-}
-main .container__post .div__title p {
-    width: 50%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-main .container__post .div__post .div__username a {
-    font-size: 1.1em;
-    text-decoration: none;
-    color: black;
-}
-main .container__post .div__title {
-    display: flex;
-    gap: 8px;
-    flex-direction: column;
-}
-main .container__post .div__post {
-    border-bottom: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 15px;
-}
-
-main .container__post .div__post .div__title a {
-    width: 100%;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-}
-
-main .container__post .div__post a:hover{
-    text-decoration: underline;
-}
-main .next__page {
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    justify-content: center;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-}
-
-main .next__page a {
-    text-decoration: none;
-    color: rgb(70, 70, 252);
-}
-
-main .next__page a:hover{
-    color: blue;
-    text-decoration: underline;
-}
-
-main .nav__main {
-    width: 100%;
-    border-bottom: 1px solid black;
+.nav__main {
+    background-color: #007bff;
     padding: 10px;
+    border-radius: 5px;
     margin-bottom: 20px;
 }
-main .nav__main ul {
+
+.nav__main ul {
     list-style: none;
+    padding: 0;
+    margin: 0;
     display: flex;
-    gap: 10px;
+    justify-content: center;
 }
 
-main .nav__main ul li {
-    cursor: pointer;
+.nav__main ul li {
+    margin-right: 20px;
 }
-main .nav__main ul li a{
+.nav__main ul li a {
     text-decoration: none;
-    color:black;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    padding:5px;
+    border-radius: 5px;
+    transition: 0.2s;
 }
-main .nav__main ul li a:hover {
+.nav__main ul li a:hover{
+    background-color: white;
+    color: #007bff;
+}
+.container__post {
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.150);
+    border-radius: 5px;
+}
+
+.div__post {
+    margin-bottom: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.150);
+    padding:10px;
+}
+
+.div__username {
+    margin-bottom: 5px;
+}
+
+.div__username span {
+    font-size: 16px;
+}
+.div__username  a {
+    text-decoration: none;
+}
+.div__username a:hover{
     text-decoration: underline;
 }
-main .container__post .div__title  {
-    width: 100%;
+.div__title {
+    margin-bottom: 10px;
 }
 
-@media (max-width: 630px) {
-    main .container__post .div__post .div__title a {
+.div__title strong {
+    font-size: 18px;
+}
+.div__title strong a {
+    text-decoration: none;
+    color: #007bff;
+}
+.div__title strong a:hover{
+    text-decoration: underline;
+}
+.div__likes__comments {
+    font-size: 14px;
+    color: #666;
+}
+
+.next__page {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.next__page a {
+    text-decoration: none;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 0 10px;
+}
+@media (max-width: 730px) {
+    .container__post {
+        border-radius: 0;
+    }
+}
+@media only screen and (max-width: 630px) {
+    main {
+        max-width: 100%;
+        padding:0;
+    }
+    .nav__main {
+        border-radius: 0;
+    }
+    .nav__main ul li {
+        margin-right: 10px;
+    }
+
+    .nav__main ul li a {
+        font-size: 14px;
+    }
+
+    .div__username span {
+        font-size: 14px;
+    }
+
+    .div__title strong {
         font-size: 16px;
+    }
+
+    .div__likes__comments {
+        font-size: 12px;
+    }
+
+    .next__page a {
+        padding: 8px 16px;
+        margin: 0 5px;
     }
 }
