--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,57 @@
+<!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {{#each cssFiles}}
         <link rel="stylesheet" href="{{this}}">
     {{/each}}
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"/>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="https://cdn.tiny.cloud/1/454pdvfz0jed1rxqcg1lhf6h96kfx2ar95452xdq0z90oz33/tinymce/7/tinymce.min.js"
+        referrerpolicy="origin"></script>
+    <script type="module">
+        import {setup} from './js/create-post.js'
+        document.addEventListener("DOMContentLoaded", function() {
+            tinymce.init({
+                selector: '#body',
+                plugins: 'advlist autolink lists link image charmap print preview anchor',
+                toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help',
+                readonly: false,
+                setup: setup
+            });
+        });
+    </script>
+    <script type="module">
+        import {setup} from "./js/edit-profile.js"
+        const bio = `{{biografy}}`
+        document.addEventListener("DOMContentLoaded", function() {
+            tinymce.init({
+                selector: '#biography',
+                plugins: 'advlist autolink lists link image charmap print preview anchor',
+                toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | help',
+                readonly: false,
+                setup:setup
+            });
+        });
+    </script>
+    <script>
+        const user = "{{id}}";
+        const idPost = "{{id2}}";
+    </script>
+    <link rel="shortcut icon" href="http://localhost:8080/imgs/node.png" type="image/x-icon">
     <title> Node Blog || {{title}} </title>
+
     <style>
     </style>
 </head>
+
 <body>
     {{{body}}}
     {{#each jsFiles}}
         <script src="{{this}}"></script>
     {{/each}}
 </body>
+
 </html>
