--- a/src/public/css/edit-profile/edit-profile.css
+++ b/src/public/css/edit-profile/edit-profile.css
@@ -40,8 +40,7 @@ label {
 main form input:focus,main form textarea:focus {
     outline:1px solid #007bff;
 }
-input[type="text"],
-textarea {
+main form input[type="text"]{
     width: 100%;
     padding: 12px;
     font-size: 16px;
