--- a/views/edit-profile/edit-profile.handlebars
+++ b/views/edit-profile/edit-profile.handlebars
@@ -1,25 +1,2 @@
 {{> header}}
-
-<main>
-    <h1 style="text-align: center; margin-bottom:10px; margin-top:10px;">Editar Perfil</h1>
-    <div class="container">
-        <form>
-            <div class="form-group">
-                <label for="username">Nome de usuário</label>
-                <abbr title="Indisponível no momento">
-                    <input type="text" id="username" value="{{username}}" disabled>
-                </abbr>
-                <span style="margin:10px;" class="span__text"></span>
-            </div>
-            <div class="form-group">
-                <label for="biography">Biografia</label>
-                <span class="span__biografy">{{{biografy}}}</span>
-                <textarea id="biography"></textarea>
-            </div>
-            <div class="div__buttons">
-                <button type="button" class="cancel-button">Cancelar</button>
-                <button type="submit" class="submit-button">Concluído</button>
-            </div>
-        </form>
-    </div>
-</main>
+<main><h1 style="text-align: center; margin-bottom:10px; margin-top:10px;">Editar Perfil</h1><div class="container"><form><div class="form-group"><label for="username">Nome de usuário</label><abbr title="Indisponível no momento"><input type="text" id="username" value="{{username}}" disabled></abbr><span style="margin:10px;" class="span__text"></span></div><div class="form-group"><label for="biography">Biografia</label><span class="span__biografy">{{{biografy}}}</span><textarea id="biography"></textarea></div><div class="div__buttons"><button type="button" class="cancel-button">Cancelar</button><button type="submit" class="submit-button">Concluído</button></div></form></div></main>
