--- a/views/login/login.handlebars
+++ b/views/login/login.handlebars
@@ -1,24 +1,1 @@
-
-<span class="msg"></span>
-<div class="container">
-     <div class="div-img">
-          <img src="{{img}}" alt="">
-     </div>
-    <form>
-       <div>
-            <label for="username">Username</label>
-            <input type="text" placeholder="username" id="username">
-       </div>
-       <div>
-            <label for="password">Password</label>
-            <input type="password" placeholder="password" id="password">
-       </div>
-       <div class="link_recovery">
-            <a href="/sendTokenRecovery"> Esqueceu a senha ? </a>
-       </div>
-       <button>Login</button>
-        <span>
-            <p>Não tem uma conta ? <a href="/register"> Criar conta </a></p>
-        </span>
-    </form>
-</div>
+<div class="container"><div class="div-img"><img src="{{img}}" alt=""></div><form><div><label for="username">Username</label><input type="text" placeholder="username" id="username"></div><div><label for="password">Password</label><input type="password" placeholder="password" id="password"></div><div class="link_recovery"><a href="/sendTokenRecovery"> Esqueceu a senha ? </a></div><button>Login</button><span class="msg" style="font-size: 12px;"></span><span><p>Não tem uma conta ? <a href="/register"> Criar conta </a></p></span></form></div>
