--- a/src/public/css/my-post/my-post.css
+++ b/src/public/css/my-post/my-post.css
@@ -1,66 +1,90 @@
+/* Estilos gerais */
 
-main {
-    margin: 20px auto;
-    max-width:800px;
-    border-radius: 5px;
-    padding-top:15px;
-    background-color: white;
-}
 
 main > h1 {
     text-align: center;
-    margin: 15px 0px;
+    margin: 10px;
+    color: #333;
+    padding:10px;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:10px;
 }
 
-.div__post {
-    position: relative;
+.no-posts {
+    text-align: center;
+    padding-bottom: 10px;
+    color: #999;
+}
+
+.post {
+    background-color:white;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.150);
-    padding:10px;
-}
-main .div__post .div__button {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    padding:10px;
-}
-main .div__post .div__button button {
-    padding:10px;
-    cursor: pointer;
-    color: red;
-    border: none;
-    background-color: transparent;
+    padding: 20px;
+    width: 100%;
+    max-width: 600px;
 }
 
-.div__username {
-    margin-bottom: 5px;
-}
-
-.div__username span {
-    font-size: 16px;
-}
-.div__username  a {
+.post-title a {
+    color: #333;
     text-decoration: none;
-}
-.div__username a:hover{
-    text-decoration: underline;
-}
-.div__title {
-    margin-bottom: 10px;
-}
-
-.div__title strong {
     font-size: 18px;
+    font-weight: bold;
 }
-.div__title strong a {
-    text-decoration: none;
-    color: #007bff;
+
+.post-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
 }
-.div__title strong a:hover{
-    text-decoration: underline;
-}
-.div__likes__comments {
+
+.post-details {
     font-size: 14px;
     color: #666;
+}
+
+.comment-count,
+.response-count {
+    margin-right: 10px;
+}
+
+.separator {
+    color: #999;
+}
+
+.no-comments {
+    color: #999;
+}
+
+.post-date {
+    font-size: 12px;
+    color: #999;
+}
+
+.post-actions {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+}
+
+.delete-btn {
+    background-color: #ff4d4d;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 760px) {
+    .post {
+        padding: 15px;
+        border-radius:0;
+    }
 }
