--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,53 +1,2 @@
-<header>
-    <button id="open__menu">
-          <span class="material-symbols-outlined icon__header">menu</span>
-    </button>
-    <button id="close__menu" style="display: none;">
-        <span class="material-symbols-outlined icon__header">close</span>
-    </button>
-    <div class="div__icon" style="cursor:pointer;">
-        <span style="font-size:1.2em ;">
-            Node Blog
-        </span>
-        <img src="{{img}}" alt="Node Photo">
-    </div>
-    <nav class="nav__menu nav">
-
-        <ul class="ul__menu" >
-            <li>
-                <a href="/login">Login</a>
-            </li>
-            <li>
-                <a href="/register">Registro</a>
-            </li>
-        </ul>
-    </nav>
-    <nav class="nav__cont nav" style="display:none;">
-        <ul>
-            <li>
-                <a href="/create-post" id="create__post">
-                    <span  class="span__text">Criar</span>
-                    <span>+</span>
-                </a>
-            </li>
-            <li>
-                <a href="#" id="edit-profile">Editar Perfil</a>
-            </li>
-            <li>
-                <a href="#" id="logout">Logout</a>
-            </li>
-            <li>
-                <a href="#" id="my-post">Minhas Postagens</a>
-            </li>
-        </ul>
-        <ul class="ul__notification">
-            <li id="notification" style="display:flex; align-items:center;">
-                <a href="#" style="position: relative;">
-                    <span class="span__text">Notificações</span>
-                    <span class="material-symbols-outlined icon__header" style="font-size: 16px;">notifications</span>
-                    <span class="number__notification" style="font-size: 12px;">{{notification}}</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
+<header><button id="open__menu"><span class="material-symbols-outlined icon__header">menu</span></button><button id="close__menu" style="display: none;"><span class="material-symbols-outlined icon__header">close</span></button><div class="div__icon" style="cursor:pointer;"><span style="font-size:1.2em ;">Node Blog</span><img src="{{img}}" alt="Node Photo"></div><nav class="nav__menu nav"><ul class="ul__menu" ><li><a href="/login">Login</a></li><li><a href="/register">Registro</a></li></ul></nav><nav class="nav__cont nav" style="display:none;"><ul><li>
+<a href="/create-post" id="create__post"><span  class="span__text">Criar</span><span>+</span></a></li><li><a href="#" id="edit-profile">Editar Perfil</a></li><li><a href="#" id="logout">Logout</a></li><li><a href="#" id="my-post">Minhas Postagens</a></li></ul><ul class="ul__notification"><li id="notification" style="display:flex; align-items:center;"><a href="#" style="position: relative;"><span class="span__text">Notificações</span><span class="material-symbols-outlined icon__header" style="font-size: 16px;">notifications</span><span class="number__notification" style="font-size: 12px;">{{notification}}</span></a></li></ul></nav></header>
